# gk-stringcalculator-haskell

./: CHANGELOG.md  LICENSE  README.md  gk-stringcalculator-haskell.cabal
src/: StringCalculator.hs
test/: Main.hs
