cabal-version:      3.0
name:               gk-stringcalculator-haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Gian Carlo Pace
maintainer:         giancarlo.pace@gmail.com
-- copyright:
category:           Kata
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  StringCalculator
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable gk-stringcalculator-haskell
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.0.0,
        gk-stringcalculator-haskell

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite gk-stringcalculator-haskell-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.0.0,
        hspec,
        gk-stringcalculator-haskell
